nav-ok,est-ok,cursos-ok

--- a/Aplicaciones/Cursos/templates/gestionCursos.html
+++ b/Aplicaciones/Cursos/templates/gestionCursos.html
@@ -1,7 +1,5 @@
 {% extends "./base.html" %}
-
 <!-- {% block title %} Gestión de Cursos {% endblock %} -->
-
 {% block body %}
 <div class="row">
     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4">
@@ -16,8 +14,7 @@
         <h2>Gestión de Curso</h2>
         <div class="card">
             <div class="card-body">
-                <form action="registrarCurso/" method="POST">{% csrf_token %}
-                    
+                <form action="/registrarCurso/" method="POST">{% csrf_token %}                    
                     <div class="form-group">
                         <input type="text" id="txtNombre" name="txtNombre" class="form-control" placeholder="Nombre"
                             maxlength="50" required>
@@ -53,7 +50,7 @@
                         <td>{{c.codigo}}</td>
                         <td>{{c.nombre}}</td>
                         <td>{{c.creditos}}</td>
-                        <td><a href="est/{{c.codigo}}" class="btn btn-primary">Ir</a></td>
+                        <td><a href="est/listaCurso/{{c.codigo}}" class="btn btn-primary">Ir</a></td>
                         <td><a href="edicionCurso/{{c.codigo}}" class="btn btn-info">Editar</a></td>
                         <td><a href="eliminarCurso/{{c.codigo}}" class="btn btn-danger btnEliminacion">Eliminar</a></td>
                     </tr>
