--- a/Aplicaciones/Cursos/templates/base.html
+++ b/Aplicaciones/Cursos/templates/base.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     {% load static %}
     <meta charset="UTF-8">
@@ -10,18 +9,13 @@
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/gestionCursos.css' %}">
 </head>
-
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-info">
-        <a class="navbar-brand" href="#">Universidad</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <a class="navbar-brand" href="#">Areas</a>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/">cursos<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contacto</a>
@@ -31,7 +25,6 @@
     </nav>
     <div class="container py-4">
         {% block body %}
-
         {% endblock %}
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -45,5 +38,4 @@
     </script>
     <script src="{% static 'js/gestionCursos.js' %}"></script>
 </body>
-
 </html>
