--- a/Aplicaciones/Estudiantes/templates/edicionEst.html
+++ b/Aplicaciones/Estudiantes/templates/edicionEst.html
@@ -8,9 +8,9 @@
         <h2>Edición de Estudiante</h2>
         <div class="card">
             <div class="card-body">
-                <form action="/est/editarEst/{{Estudiante.idest}}" method="POST">{% csrf_token %}
+                <form action="../editarEst/{{Estudiante.idest}}" method="POST">{% csrf_token %}
                     <div class="form-group">
-                        <input type="text" id="txtNombre" name="txtNombre" value="{{Estudiante.nombre}}{{Estudiante.idest}}" class="form-control" placeholder="nombre"
+                        <input type="text" id="txtNombre" name="txtNombre" value="{{Estudiante.nombre}}" class="form-control" placeholder="nombre"
                             maxlength="6" >
                     </div>
                     <div class="form-group">
@@ -23,9 +23,11 @@
                     </div>
                     <div>
                         <select name="txtCurso" id="txtCurso"  class="form-control">
-                            <option value="" selected>{{Estudiante.idcur}}</option>
+                            <option value="{{Estudiante.idcur.codigo}}" selected>{{Estudiante.idcur.nombre}}</option>
                             {% for op in curso %}
+                            {% if op.nombre != Estudiante.idcur.nombre %}
                             <option  value={{op.codigo}} >{{op.nombre}}</option>
+                            {% endif %}
                             {% endfor %}
                         </select>
                     </div>
