lista y registro 1 edicion

--- a/Aplicaciones/Estudiantes/templates/gestionEst.html
+++ b/Aplicaciones/Estudiantes/templates/gestionEst.html
@@ -45,7 +45,7 @@
     </div>
     <div class="col-sm-12 col-md-6 col-lg-8 col-xl-8">
         <h1>Listado de Estudiantes 
-            <span><a href="https://www.google.com/"><button class="btn btn-danger">LISTA</button></a></span>
+            <span><a href="../Registro/{{curso}}"><button class="btn btn-danger">LISTA</button></a></span>
             <span><a href=""><button class="btn btn-primary">REGISTRO</button></a></span>
         </h1>
         <div class="table-responsive py-2">
