--- a/Aplicaciones/Estudiantes/templates/RegistroEst.html
+++ b/Aplicaciones/Estudiantes/templates/RegistroEst.html
@@ -2,10 +2,34 @@
 {% block title %} Gestión de Cursos {% endblock %}
 {% block body %}
 <div class="row">
-    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-2">
-        <h1>Actividades pedagogicas</h1>        
+    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4">
+        <h2>Registro de actividades</h2>
+        <div class="card">
+            <div class="card-body">
+                <form action="../registrarEst/" method="POST">{% csrf_token %}
+                    <div class="form-group">
+                        <input type="text" id="txtNombre" name="txtNombre" class="form-control" placeholder="Nombre" maxlength="15" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="date" id="txtfecha" name="txtfecha" class="form-control" placeholder="fecha" required>
+                    </div>
+                    <div>
+                        <select name="txtCurso" id="txtCurso"  class="form-control" required>
+                            <option value="" disabled selected>Seleccione un curso</option>
+                            {% for op in cursos %}
+                            <option  value={{op.codigo}} >{{op.nombre}}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <br>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-success btn-block text-white">Guardar</button>
+                    </div>
+                </form>
+            </div>
+        </div>        
     </div>
-    <div class="col-sm-12 col-md-6 col-lg-8 col-xl-4">
+    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4">
         {% if messages %}
         {% for message in messages %}
         <div class="alert alert-dismissible alert-success">
@@ -37,8 +61,8 @@
             </table>
         </div>
     </div>
-    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-6">
-        <h1>Actividades pedagogicas</h1>        
+    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4">
+        <h2>Actividades pedagogicas</h2>        
     </div>
 </div>
 {% endblock %}
