--- a/Aplicaciones/Cursos/templates/base.html
+++ b/Aplicaciones/Cursos/templates/base.html
@@ -38,4 +38,13 @@
     </script>
     <script src="{% static 'js/gestionCursos.js' %}"></script>
 </body>
+<script>
+    var message_ele = document.getElementById("message_container");
+setTimeout(function(){ 
+   message_ele.style.display = "none"; 
+}, 3000);
+function clickEnviar(boton) {
+  boton.classList.add('disabled');
+}
+</script>
 </html>
