--- a/Aplicaciones/Estudiantes/templates/RegistroEst.html
+++ b/Aplicaciones/Estudiantes/templates/RegistroEst.html
@@ -2,67 +2,89 @@
 {% block title %} Gestión de Cursos {% endblock %}
 {% block body %}
 <div class="row">
-    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4">
-        <h2>Registro de actividades</h2>
-        <div class="card">
-            <div class="card-body">
-                <form action="../registrarEst/" method="POST">{% csrf_token %}
-                    <div class="form-group">
-                        <input type="text" id="txtNombre" name="txtNombre" class="form-control" placeholder="Nombre" maxlength="15" required>
-                    </div>
-                    <div class="form-group">
-                        <input type="date" id="txtfecha" name="txtfecha" class="form-control" placeholder="fecha" required>
-                    </div>
-                    <div>
-                        <select name="txtCurso" id="txtCurso"  class="form-control" required>
-                            <option value="" disabled selected>Seleccione un curso</option>
-                            {% for op in cursos %}
-                            <option  value={{op.codigo}} >{{op.nombre}}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                    <br>
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-success btn-block text-white">Guardar</button>
-                    </div>
-                </form>
-            </div>
-        </div>        
-    </div>
-    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4">
+    <div class="col-sm-12 col-md-6 col-lg-8 col-xl-6">
         {% if messages %}
         {% for message in messages %}
-        <div class="alert alert-dismissible alert-success">
+        <div class="alert alert-dismissible alert-success" id="message_container">
             <button type="button" class="close" data-dismiss="alert">&times;</button>
             <strong class="text-dark">{{ message }}</strong>
         </div>
         {% endfor %}
         {% endif %}
-        <h2>Asistencia</h2>
+        <h2>Asistencia
+        <span>
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+        registrar actividad
+        </button>      
+        </span>
+        </h2>
         <div class="table-responsive py-2">
             <table class="table table-striped">
                 <thead>
                     <tr>
                         <th>#</th>
                         <th>Nombres Y Apellidos</th>
-                        <th colspan="2">Acciones</th>
+                        <th colspan="3">Acciones</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for c in Estudiantes %}
                     <tr>
                         <td>{{forloop.counter}}</td>
-                        <td>{{c.nombre}} {{c.paterno}} {{c.materno}}</td>
-                        <td><a href="" style="padding:0px" class="btn btn-info">PRESENT</a></td>
-                        <td><a href="" style="padding:0px" class="btn btn-danger btnEliminacion">LICENCIA</a></td>
+                        <td>{{c.idest}} {{c.nombre}} {{c.paterno}} {{c.materno}}</td>
+                        <td><a href="../Asistencia/{{c.idest}}/{{1}}" class="btn btn-info" onclick="clickEnviar(this)">PRESENTE</a></td>
+                        <td><a href="../Asistencia/{{c.idest}}/{{2}}" class="btn btn-warning">LICENCIA</a></td>
+                        <td><a href="../Asistencia/{{c.idest}}/{{0}}" class="btn btn-danger">FALTA</a></td>
                     </tr>
                     {% endfor %}
                 </tbody>
             </table>
         </div>
     </div>
-    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4">
-        <h2>Actividades pedagogicas</h2>        
+    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-6">
+        <h2>Actividades pedagogicas</h2>    
+        <div class="table-responsive py-2">
+          <table class="table table-striped">
+              <thead>
+                  <tr>
+                      <th>#</th>
+                      <th>Asistencias</th>
+                      <th colspan="3">Acciones</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  {% for a in Asistentes %}
+                  <tr>
+                      <td>{{forloop.counter}}</td>
+                      <td>{{a.idestAsist.nombre}} {{a.idestAsist.paterno}} {{a.idestAsist.materno}}</td>
+
+                  </tr>
+                  {% endfor %}
+              </tbody>
+          </table>
+      </div>    
     </div>
 </div>
+
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
