--- a/Aplicaciones/Cursos/templates/base.html
+++ b/Aplicaciones/Cursos/templates/base.html
@@ -9,6 +9,11 @@
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/gestionCursos.css' %}">
 </head>
+<style>
+.fecha{
+  writing-mode: vertical-rl;
+}
+</style>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-info">
         <a class="navbar-brand" href="#">Areas</a>
