--- a/Aplicaciones/Estudiantes/templates/RegistroEst.html
+++ b/Aplicaciones/Estudiantes/templates/RegistroEst.html
@@ -11,7 +11,7 @@
         </div>
         {% endfor %}
         {% endif %}
-        <h2>Asistencia</h2>
+        <h2>Asistencia <span><a class="btn btn-primary" href="../listaDeAsistencia/{{curso}}">ver</a></span></h2>
         <div class="table-responsive py-2">
             <table class="table table-striped">
                 <thead>
@@ -26,9 +26,9 @@
                     <tr>
                         <td>{{forloop.counter}}</td>
                         <td>{{c.idest}} {{c.nombre}} {{c.paterno}} {{c.materno}}</td>
-                        <td><a href="../Asistencia/{{c.idest}}/{{1}}" class="btn btn-info" onclick="clickEnviar(this)">PRESENTE</a></td>
-                        <td><a href="../Asistencia/{{c.idest}}/{{0}}" class="btn btn-info" onclick="clickEnviar(this)">FALTA</a></td>
-                        <td><a href="../Asistencia/{{c.idest}}/{{0.2}}" class="btn btn-warning" onclick="clickEnviar(this)">LICENCIA</a></td>
+                        <td><a href="../Asistencia/{{c.idest}}/{{1}}/{{curso}}" class="btn btn-info" onclick="clickEnviar(this)">PRESENTE</a></td>
+                        <td><a href="../Asistencia/{{c.idest}}/{{0}}/{{curso}}" class="btn btn-info" onclick="clickEnviar(this)">FALTA</a></td>
+                        <td><a href="../Asistencia/{{c.idest}}/{{0.2}}{{curso}}" class="btn btn-warning" onclick="clickEnviar(this)">LICENCIA</a></td>
                     </tr>
                     {% endfor %}
                 </tbody>
